--- a/url/Cargo.toml
+++ b/url/Cargo.toml
@@ -28,18 +28,21 @@ debugger_test = "0.1"
 debugger_test_parser = "0.1"
 
 [dependencies]
+
 form_urlencoded = { version = "1.1.0", path = "../form_urlencoded" }
-idna = { version = "0.3.0", path = "../idna" }
+idna = { version = "0.3.0", default-features = false, path = "../idna", optional = true }
 percent-encoding = { version = "2.2.0", path = "../percent_encoding" }
-serde = {version = "1.0", optional = true, features = ["derive"]}
+serde = {version = "1.0", default-features = false, optional = true, features = ["derive"]}
 
 [features]
-default = []
+default = ["std", "idna"]
+std = ["idna/std"]
 # UNSTABLE FEATURES (requires Rust nightly)
 # Enable to use the #[debugger_visualizer] attribute.
 debugger_visualizer = []
 # Expose internal offsets of the URL.
 expose_internals = []
+
 
 [[bench]]
 name = "parse_url"
