url: add core-error for thiserror-core

--- a/url/Cargo.toml
+++ b/url/Cargo.toml
@@ -43,6 +43,7 @@ debugger_visualizer = []
 # Expose internal offsets of the URL.
 expose_internals = []
 alloc = ["idna/alloc", "serde/alloc"]
+core-error = []
 
 
 [[bench]]
